# CRAFT-pytorch

./: CMakeLists.txt  package.xml  setup.py  test.py
deep-text-recognition-benchmark/: dataset.py
src/craft/deep-text-recognition-benchmark/: demo.py  model.py
